--- a/OPM0PG_MAUI/RegistrationPage.xaml
+++ b/OPM0PG_MAUI/RegistrationPage.xaml
@@ -2,11 +2,23 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="OPM0PG_MAUI.RegistrationPage"
-             Title="Registration">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Registration"
+             xmlns:vm="clr-namespace:OPM0PG_MAUI.ViewModels"
+             x:DataType="vm:RegistrationViewModel">
+    <ScrollView>
+        <VerticalStackLayout
+            Spacing="25"
+            Padding="30,0"
+            VerticalOptions="Center">
+            <Label Text="Username"></Label>
+            <Entry Text="{Binding RegistrationDto.UserName}" Placeholder="Enter name"></Entry>
+            <Label Text="Email"></Label>
+            <Entry Text="{Binding RegistrationDto.Email}" Placeholder="Enter email" Keyboard="Email"></Entry>
+            <Label Text="Password"></Label>
+            <Entry Text="{Binding RegistrationDto.Password}" IsPassword="True" Placeholder="Enter password"></Entry>
+            <Label Text="Confirm Password"></Label>
+            <Entry Text="{Binding RegistrationDto.ConfirmPassword}" IsPassword="True" Placeholder="Confirm password"></Entry>
+            <Button Command="{Binding RegisterCommand}"  IsEnabled="{Binding RegistrationDto.IsValid}"  Text="Submit"></Button>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
